<resources>
    <string name="tab1">收件箱</string>
    <string name="tab2">短信库</string>
    <string name="tab3">更多</string>
    <string name="app_name">快信</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="whatfestival">为您准备了春节短信</string>
    <string name="send_hint">请输入手机号码</string>
    <string name="send_toast">请输入一个手机号码</string>
    <string name="send_sending">正在发送短信...</string>
    <string name="sendsuccess">短信发送成功</string>
    <string name="sendsuccess_by_multi">短信发送成功，详情请见发送日志</string>
    <string name="sending">短信正在发送，详情请见发送日志</string>
    <string name="sendfailed">短信发送失败</string>
    <string name="contact_empty">您的手机中没有联系人</string>
    <string name="select_ok">确定</string>
    <string name="select_cancel">取消</string>
    <string name="group">群组</string>
    <string name="send">发送</string>
    <string name="multiselect">多选</string>
    <string name="exitdialog_title">退出本软件</string>
    <string name="exitdialog_content">您确定要退出本软件吗？</string>
    <string name="exitdialog_ok">确定</string>
    <string name="exitdialog_cancel">返回</string>
    <string name="get_more">加载更多。。。</string>
    <string name="get_more_string">加载更多。。。</string>
    <string name="multichoicedialogtitle">请选择回复方式</string>
    <string name="multichoicedialogitem1">谢谢</string>
    <string name="multichoicedialogitem2">祝您阖家欢乐，万事如意！</string>
    <string name="multichoicedialogitem3">祝您身体健康～～</string>
    <string name="multichoicedialogitem4">您的短信已收到，稍后给您回复，不便之处还望谅解。</string>
    <string name="multichoicedialogitem5">祝节日快乐</string>
    <string name="multichoicedialogitem6">从节日库选择信息</string>
    <string name="key_words">"节日快乐", "值此", "佳节", "衷心", "祝", "愿", "祝愿","恭喜","节日","前途","思念","问候","礼物","顺","棒","好","兴","笑","美满","祝福" ,"平安" ,"吉祥" ,"快乐" ,"开心" ,"如意","发财","健康","幸福","团圆","安康","好运","美好","欢笑","欢喜","顺利"</string>
    <string name="loading_contacts">联系人加载中...</string>
    <string name="loading_sms">短信加载中...</string>
    <string name="main_setting">手动回复设置</string>
    <string name="set_autoreply">自动回复功能</string>
    <string name="set_autoreply_on">自动回复功能开启</string>
    <string name="set_autoreply_off">自动回复功能关闭</string>
    <string name="set_autoreply_message">自动回复消息内容</string>
    <string name="set_autoreply_message_content">祝你一帆风顺，二龙腾飞，三羊开泰，四季平安，五福临门，六六大顺，七星高照，八方来财，九九同心，十全十美。</string>
    <string name="set_about">关于</string>
    <string name="set_share">分享</string>
    <string name="set_phone">玩转手机</string>
    <string name="set_share_content">最近发现个短彩信管理神器，超多节日短信，还有短信转发王和个性话短信设置功能呐~快来体验吧！下载地址：</string>
    <string name="set_contacts">如果您在使用的过程中出现了Bug或者有任何的建议或意见，请您联系我们，谢谢您对本软件的支持～</string>
    <string name="set_author">作者：兰州大学MM创业孵化基地</string>
    <string name="set_email">邮箱：18298358753@139.com</string>
    <string name="loading">加载中...</string>
    <string name="ok">确认</string>
    <string name="main_back">返回</string>
    <string name="spring">春节</string>
    <string name="newyear">元旦</string>
    <string name="qingrenjie">情人节</string>
    <string name="yuanxiaojie">元宵节</string>
    <string name="happy_holiday">节日快乐</string>
    <string name="holiday_one">元旦</string>
    <string name="holiday1">元旦</string>
    <string name="holiday2">腊八节</string>
    <string name="holiday3">春节</string>
    <string name="holiday4">元宵节</string>
    <string name="holiday5">情人节</string>
    <string name="holiday6">妇女节</string>
    <string name="holiday7">植树节</string>
    <string name="holiday8">愚人节</string>
    <string name="holiday9">清明节</string>
    <string name="holiday10">劳动节</string>
    <string name="holiday11">青年节</string>
    <string name="holiday12">母亲节</string>
    <string name="holiday13">护士节</string>
    <string name="holiday14">儿童节</string>
    <string name="holiday15">父亲节</string>
    <string name="holiday16">端午节</string>
    <string name="holiday17">建党节</string>
    <string name="holiday18">建军节</string>
    <string name="holiday19">七夕节</string>
    <string name="holiday20">教师节</string>
    <string name="holiday21">中秋节</string>
    <string name="holiday22">国庆节</string>
    <string name="holiday23">重阳节</string>
    <string name="holiday24">环卫节</string>
    <string name="holiday25">万圣节</string>
    <string name="holiday26">记者节</string>
    <string name="holiday27">光棍节</string>
    <string name="holiday28">圣诞节</string>
    <string name="holiday_mms_read_exception">读取彩信异常</string>
    <string name="main_fsend">组发</string>
    <string name="main_gsend">群发</string>
    <string name="main_autoreply">自动回复</string>
    <string name="main_manual">手动回复</string>
    <string name="main_smslib">节日短彩信库</string>
    <string name="main_update">更新</string>
    <string name="main_about">玩转手机</string>
    <string name="main_guanyu">关于</string>
    <string name="main_inbox">收件箱</string>
    <string name="main_subsms">短/彩信包</string>
    <string name="main_statics">发送日志</string>
    <string name="main_individual">短信管家</string>
    <string name="main_sms_forward">短信转发王</string>
    <string name="main_door">移动掌上门户</string>
    <string name="main_life">移动生活客户端</string>
    <string name="main_flow">流量套餐</string>
    <string name="autoreply_choose">选择</string>
    <string name="not_support">对不起，暂不支持此功能</string>
    <string name="manual_reply_setting">设置</string>
    <string name="manual_sure">完成</string>
    <string name="manual_cancel">取消</string>
    <string name="auto_key">关键字:</string>
    <string name="splash_start">开始</string>
    <string-array name="subsms_text">
        <item>快信专属50元短信包（1000条）</item>
        <item>快信专属50元彩信包（300条）</item>
        <item>开通短信2元套餐（25条）</item>
        <item>开通短信5元套餐（60条）</item>
        <item>开通短信10元套餐（160条）</item>
        <item>开通彩信3元套餐（15条）</item>
        <item>开通彩信5元套餐（25条）</item>
        <item>开通彩信8元套餐（40条）</item>
        <item>查询剩余短信条数</item>
    </string-array>
    <string-array name="subsms_text_info">
        <item>开通快信专属50元包1000条短信包（开通之日起限6个月用完，6个月内不能重复订购）</item>
        <item>开通快信专属50元包300条彩信包（开通之日起限6个月用完，6个月内不能重复订购）</item>
        <item>开通2元包25条短信套餐/月</item>
        <item>开通5元包60条短信套餐/月</item>
        <item>开通10元包160条短信套餐/月</item>
        <item>3元套餐包15条彩信/月</item>
        <item>5元套餐包25条彩信/月</item>
        <item>8元套餐包40条彩信/月</item>
        <item>查询剩余短信条数</item>
    </string-array>
    <string-array name="subsms_value">
        <item>KTDX1000419</item>
        <item>KTCX300419</item>
        <item>30400101</item>
        <item>30400201</item>
        <item>30400301</item>
        <item>30500101</item>
        <item>30500201</item>
        <item>30500301</item>
        <item>TCCX</item>
    </string-array>
    <string-array name="subsms_value_ct">
        <item>101</item>
        <item>3034</item>
        <item>3032</item>
        <item>3035</item>
        <item>3033</item>
        <item>3036</item>
        <item>108</item>
    </string-array>
    <string name="auto_reply_delay_note">自动回复时间延迟(秒)</string>
    <string name="auto_reply_disabled">自动回复功能已经关闭</string>
    <string name="auto_reply_by_time_enabled">根据设定的时间段回复功能开启</string>
    <string name="auto_reply_by_time_begin">点击设置开始时间</string>
    <string name="auto_reply_by_time_end">点击设置结束时间</string>
    <string name="auto_reply_by_time_no">未设置时间</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="second">秒</string>
    <string name="seperator">--</string>
    <string name="mms_subject_begintag">&lt;&lt;主题:</string>
    <string name="mms_subject_endtag">&gt;&gt;</string>
    <string name="send_time">发送时间:</string>
    <string name="subject_null">未读取成功</string>
    <string-array name="individual_business">
        <item>短信签名</item>
        <item>短信转移</item>
        <item>短信到达确认</item>
        <item>短信云备份</item>
        <item>短信过滤</item>
    </string-array>
    <string-array name="individual_detail_business">
        <item>业务介绍</item>
        <item>业务资费</item>
        <item>业务说明</item>
        <item>业务办理</item>
        <item>操作设置</item>
    </string-array>
    <string name="individual_detail_one_intro">短信到达确认业务能够帮助您确认您的短信对方是否成功接收。通过业务设置，您发送的每条短信，系统都将进行跟踪和判断，并将对方的接收状态，如关机、短信已满、不在服务区等，以短信方式告知您。使用该业务，能够帮您在更好的了解会议、聚会等群发短信通知，对方是否成功收到，以便您及时进行补充通知。</string>
    <string name="individual_detail_one_fee">短信到达确认业务按包月方式收费，费用为1.0元/月，在业务开通72小时后收取当月包月费（订购72小时之内退订不收费），以后每月月初收取该月包月费，一月之内多次退订、订购同一业务只收取一次包月费。
\n小贴士：如您暂时不需要使用业务功能，可通过暂停业务功能实现，无需退订业务。业务在暂停状态下，正常收取功能费。</string>
    <string name="individual_detail_one_note">1、目前短信到达确认业务对中国移动用户提供； 
\n2、开通业务后，必须先进行激活，业务功能才能生效。</string>
    <string-array name="individual_detail_one_action">
        <item>KTBJHZ</item>
        <item>QXBJHZ</item>
    </string-array>
    <string-array name="individual_detail_one_setting">
        <item>激活功能</item>
        <item>暂停功能</item>
        <item>查询业务状态</item>
    </string-array>
    <string-array name="individual_detail_one_setting_value">
        <item>JHBJHZ</item>
        <item>ZTBJHZ</item>
        <item>CXBJHZ</item>
    </string-array>
    <string-array name="individual_detail_one_setting_flag">
        <item>0</item>
        <item>0</item>
        <item>0</item>
    </string-array>
    <string name="individual_detail_one_strict">由于目前国内、国际短信业务互连互通组网的限制，并且全国DCS平台尚未实现互连，因此被叫回执业务目前只对本省本网用户（即甘肃移动用户）发送给开通被叫回执业务用户的短信的提供发送状态回执，甘肃移动以外所有用户发送给开通被叫回执业务用户的短信系统都不能提供发送状态回执。</string>
    <string name="individual_detail_two_intro">短信云备份业务能够帮你自动备份发出或收到的短信。您还可以登录http://218.203.165.84:8080，对备份的短信进行查询、管理等。能够有效帮您解决手机存储短信条数限制问题，为您提供万条短信存储空间。</string>
    <string name="individual_detail_two_fee">短信云备份业务按包月方式收费，费用为2.0元/月，在业务开通72小时后收取当月包月费（订购72小时之内退订不收费），以后每月月初收取该月包月费，一月之内多次退订、订购同一业务只收取一次包月费。
\n小贴士：如您暂时不需要使用业务功能，可通过暂停业务功能实现，无需退订业务。业务在暂停状态下，正常收取功能费。</string>
    <string name="individual_detail_two_note">1、短信云备份业务对于接收的短信目前只能保存本省号码（包含甘肃移动、甘肃联通和甘肃电信用户）、国外号码和所有增值业务服务商发送的短信，但个人发送的所有短信都可以正常保留到短信云备份中。
\n2、开通业务后，必须先进行激活，业务功能才能生效；
\n3、更多功体验能请登录http://218.203.165.84:8080。</string>
    <string-array name="individual_detail_two_action">
        <item>KTDXCK</item>
        <item>QXDXCK</item>
    </string-array>
    <string-array name="individual_detail_two_setting">
        <item>激活功能</item>
        <item>暂停功能</item>
        <item>查询业务状态</item>
    </string-array>
    <string-array name="individual_detail_two_setting_value">
        <item>JHCK</item>
        <item>ZTCK</item>
        <item>CXCK</item>
    </string-array>
    <string-array name="individual_detail_two_setting_flag">
        <item>0</item>
        <item>0</item>
        <item>0</item>
    </string-array>
    <string name="individual_detail_two_strict">由于目前国内短信业务互连互通组网的限制，并且全国DCS平台尚未实现互连，因此短信仓库业务对于用户接收的短信目前只能保存本省用户（包含甘肃移动、甘肃联通和甘肃电信用户）、国外用户和所有SP发送的短信，国内所有外省用户（除甘肃移动、甘肃联通和甘肃电信以外的所有国内外省用户）发送的短信无法保存到短信仓库中。但用户发送的所有短信都可以正常保留到短信仓库中。</string>
    <string name="individual_detail_three_intro">短信过滤业务能够帮你解决垃圾短消息或恶意短消息的骚扰难题，只要您提供不想接收的短信关键字、电话号码，或设置不想接收短信的时段，就可将短信骚扰拒之门外。</string>
    <string name="individual_detail_three_fee">短信过滤业务按包月方式收费，费用为2.0元/月，在业务开通72小时后收取当月包月费（订购72小时之内退订不收费），以后每月月初收取该月包月费，一月之内多次退订、订购同一业务只收取一次包月费。
\n小贴士：如您暂时不需要使用业务功能，可通过暂停业务功能实现，无需退订业务。业务在暂停状态下，正常收取功能费。</string>
    <string name="individual_detail_three_note">	1、开通业务后，必须先进行激活，业务功能才能生效；
	\n2、短信过滤业务目前只能过滤本省用户（包含甘肃移动、甘肃联通和甘肃电信用户）、国外用户和所有商家发送的短信，国内所有外省用户（除甘肃移动、甘肃联通和甘肃电信以外的所有国内外省用户）发送的短信无法被过滤。
	\n3、更多功体验能请登录http://218.203.165.84:8080。</string>
    <string name="sms_forward_register_title">您将注册成为短信转发王会员</string>
    <string name="sms_forward_register_fee_title">业务资费</string>
    <string name="sms_forward_register_fee_normal">普通会员：本业务免费</string>
    <string name="sms_forward_register_fee_high">高级会员：资费2元/月</string>
    <string name="sms_forward_register_normal">注册普通会员</string>
    <string name="sms_forward_register_high">注册高级会员</string>
    <string name="clear">清除</string>
</resources>