<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/frame_upper_background" >

        <TextView
            android:id="@+id/mMainBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/main_back_selector"
            android:gravity="center"
            android:text="@string/main_back"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="180dip"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/sms_forward_register_title"
            android:textColor="#ffffff"
            android:textSize="20dip"
            android:gravity="center" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        

        <TextView 
            android:id="@+id/mSmsForwardRegisterFeeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sms_forward_register_fee_title"
            android:textSize="20dip"
            />
        <TextView 
            android:id="@+id/mSmsForwardRegisterFeeNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sms_forward_register_fee_normal"
            android:layout_marginLeft="10dip"
            android:layout_below="@id/mSmsForwardRegisterFeeTitle"
            android:textSize="18dip"
            />
        <TextView 
            android:id="@+id/mSmsForwardRegisterFeeHigh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sms_forward_register_fee_high"
            android:layout_marginLeft="10dip"
            android:layout_below="@id/mSmsForwardRegisterFeeNormal"
            android:textSize="18dip"
            />
        
        <LinearLayout
            android:id="@+id/mSmsForwardRegisterLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/mSmsForwardRegisterFeeHigh"
            android:layout_marginTop="15dip" >

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/mSmsForwardRegisterNormal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:layout_marginRight="10dip"
                    android:background="@drawable/send_selector"
                    android:gravity="center"
                    android:paddingLeft="3dip"
                    android:text="@string/sms_forward_register_normal"
                    android:textSize="20dip"
                    android:textColor="#ffffff" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/mSmsForwardRegisterHigh"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:layout_marginRight="10dip"
                    android:background="@drawable/send_selector"
                    android:gravity="center"
                    android:paddingLeft="3dip"
                    android:text="@string/sms_forward_register_high"
                    android:textSize="20dip"
                    android:textColor="#ffffff" />
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>