<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/adblock_scanning_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/mTopLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/frame_upper_background" >

        <TextView
            android:id="@+id/mMainBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/main_back_selector"
            android:gravity="center"
            android:text="@string/main_back"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/main_inbox"
            android:textColor="#ffffff"
            android:textSize="20dip" />

        <TextView
            android:id="@+id/mMainSetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/main_setting_selector"
             android:textColor="@color/white"
            android:gravity="center"
            android:visibility="invisible" />
    </RelativeLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <ListView
            android:id="@+id/listview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/mTopLayout"
            android:background="#ffffff"
            android:padding="5dip" >
        </ListView>

        <ScrollView
            android:id="@+id/mManualSettingPage"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/wrap_content_background"
            android:visibility="invisible" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/mManualSure"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/manual_choose_selector"
                        android:gravity="center"
                        android:text="@string/manual_sure"
                        android:textColor="#ffffff" />

                    <TextView
                        android:id="@+id/mManualCancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/manual_choose_selector"
                        android:gravity="center"
                        android:text="@string/manual_cancel"
                        android:textColor="#ffffff" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <EditText
                        android:id="@+id/mManualMethodItemOne"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dip" />

                    <EditText
                        android:id="@+id/mManualMethodItemTwo"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dip" />

                    <EditText
                        android:id="@+id/mManualMethodItemThree"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dip" />

                    <EditText
                        android:id="@+id/mManualMethodItemFour"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dip" />

                    <EditText
                        android:id="@+id/mManualMethodItemFive"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dip" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </FrameLayout>

</LinearLayout>